fixed unix spacing

--- a/rsc/style.css
+++ b/rsc/style.css
@@ -4,7 +4,7 @@ html {
     color:            #DEDEE0;
     font-family:      monospace;
     font-size:        11pt;
-    max-width:        650px;
+    max-width:        700px;
     margin:           auto;
 }
 
